--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
 	<display-name>AnewB</display-name>
-	
+
 	<!-- Spring context应用 配置Spring与 mybatis -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -13,7 +13,7 @@
 		<!-- <param-value>/WEB-INF/classes/main/resources/dubbo/springhighGrade-dubboxRest.xml,classpath*:spring.xml</param-value> -->
 		<!-- <param-value>classpath:spring.xml,classpath:spring-mybatis.xml,classpath:spring-cache.xml</param-value> -->
 	</context-param>
-	
+
 	<!-- 分布式 session -->
 	<!-- <filter>
         <filter-name>springSessionRepositoryFilter</filter-name>
@@ -23,7 +23,7 @@
         <filter-name>springSessionRepositoryFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping> -->
-    
+
 	<!--编码拦截器  -->
 	<filter>
 		<description>字符集过滤器</description>
@@ -58,7 +58,7 @@
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping> -->
-	
+
 	<filter>
 		<description>druid uri监听</description>
 		<filter-name>DruidWebStatFilter</filter-name>
@@ -76,7 +76,7 @@
 		<filter-name>DruidWebStatFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
 	<!-- <filter>
 		<filter-name>logFilter</filter-name>
 		<filter-class>newb.c.filter.LogFilter</filter-class>
@@ -89,20 +89,20 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping> -->
-	
-	<!-- <context-param>  
-         <param-name>logbackConfigLocation</param-name>  
-         <param-value>classpath:logback.xml</param-value>  
-	</context-param>  
-	<listener>  
-         <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>  
-	</listener>  -->
+
+	<context-param>
+         <param-name>logbackConfigLocation</param-name>
+         <param-value>classpath:logback.xml</param-value>
+	</context-param>
+	<listener>
+         <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+	</listener>
 	<!-- dubbox REST  使用service="servlet"-->
 	<!-- 注意：如果你是用spring的ContextLoaderListener来加载spring，则必须保证BootstrapListener配置在ContextLoaderListener之前，否则dubbo初始化会出错。 -->
 	<!-- <listener>
         <listener-class>com.alibaba.dubbo.remoting.http.servlet.BootstrapListener</listener-class>
     </listener> -->
-    
+
 	<!-- spring上下文加载监听器  初始化IOC容器-->
 	<listener>
 		<description>spring监听器</description>
@@ -113,7 +113,7 @@
 	<listener>
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 	</listener>
-	
+
 	<!-- dubbox REST 使用service="servlet"-->
 	<!-- <servlet>
         <servlet-name>dispatcher</servlet-name>
@@ -136,7 +136,7 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet> -->
-	
+
 	<!-- activiti 5.16 -->
 	<!-- <servlet>
         <servlet-name>RestletServlet</servlet-name>
@@ -146,11 +146,11 @@
             <param-value>org.activiti.rest.editor.application.ModelerRestApplication</param-value>
         </init-param>
     </servlet>
-	<servlet-mapping>     
+	<servlet-mapping>
 		<servlet-name>RestletServlet</servlet-name>
 		<url-pattern>/service/*</url-pattern>
 	</servlet-mapping> -->
-	
+
 	<servlet>
 		<description>自定义的简单的springmvc</description>
 		<servlet-name>AnnotationHandleServlet</servlet-name>
@@ -168,7 +168,7 @@
         <!-- 拦截所有以.action后缀结尾的请求 -->
         <url-pattern>*.action</url-pattern>
     </servlet-mapping>
-  
+
 	<!-- Spring MVC 配置 -->
 	<servlet>
 		<description>spring mvc servlet</description>
@@ -187,9 +187,9 @@
 		<!--<url-pattern>/*</url-pattern> 不能使用/*会导致jsp页面无法编译，直接显示源码  -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	<!-- <servlet-mapping> <servlet-name>rest</servlet-name> <url-pattern>/</url-pattern> 
+	<!-- <servlet-mapping> <servlet-name>rest</servlet-name> <url-pattern>/</url-pattern>
 		</servlet-mapping> -->
-		
+
 		<!-- CXF 配置 未启用 -->
 	<servlet>
 		<servlet-name>CXFServlet</servlet-name>
@@ -199,7 +199,7 @@
 		<servlet-name>CXFServlet</servlet-name>
 		<url-pattern>/webservice/*</url-pattern>
 	</servlet-mapping>
-		
+
 	<!-- 不拦截这些静态资源   目前使用springmvc标签-->
 	<!-- <servlet-mapping>
     	<servlet-name>default</servlet-name>
@@ -210,7 +210,7 @@
     	<url-pattern>*.jpg</url-pattern>
     	<url-pattern>*.gif</url-pattern>
 	</servlet-mapping> -->
-		
+
 	<!--Druid 连接池内置监控配置  监控SQL -->
 	<servlet>
 		<servlet-name>DruidStatView</servlet-name>
@@ -225,7 +225,7 @@
 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>
-	
+
 	<!-- welcome  -->
 	<welcome-file-list>
 		<welcome-file>/web/vue/movieVue.html</welcome-file>
