--- a/pom.xml
+++ b/pom.xml
@@ -1045,6 +1045,17 @@
 		    <artifactId>hutool-all</artifactId>
 		    <version>3.0.4</version>
 		</dependency>
+		<!-- hadoop -->
+		<dependency>
+		    <groupId>org.apache.hadoop</groupId>
+		    <artifactId>hadoop-common</artifactId>
+		    <version>2.8.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.hadoop</groupId>
+		    <artifactId>hadoop-hdfs</artifactId>
+		    <version>2.8.1</version>
+		</dependency>
 
 
 
