--- a/pom.xml
+++ b/pom.xml
@@ -899,6 +899,11 @@
 		    <artifactId>activemq-core</artifactId>
 		    <version>5.7.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.activemq</groupId>
+		    <artifactId>activemq-pool</artifactId>
+		    <version>5.15.0</version>
+		</dependency>
 
 
 
@@ -1057,8 +1062,17 @@
 		    <version>2.8.1</version>
 		</dependency>
 
-
-
+		
+		
+		
+		
+		<dependency>
+            <groupId>jdk.tools</groupId>
+            <artifactId>jdk.tools</artifactId>
+            <version>1.8</version>
+            <scope>system</scope>
+            <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 
