--- a/pom.xml
+++ b/pom.xml
@@ -746,7 +746,7 @@
 		<dependency>
     		<groupId>com.alibaba</groupId>
     		<artifactId>dubbo</artifactId>
-    		<version>2.8.4</version>
+    		<version>2.8.3</version>
     		<exclusions>
     			<exclusion>
     				<artifactId>spring</artifactId>
@@ -898,6 +898,11 @@
 		    <groupId>org.apache.activemq</groupId>
 		    <artifactId>activemq-core</artifactId>
 		    <version>5.7.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.activemq</groupId>
+		    <artifactId>activemq-pool</artifactId>
+		    <version>5.15.0</version>
 		</dependency>
 
 
