--- a/pom.xml
+++ b/pom.xml
@@ -712,7 +712,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
-			<version>2.8.4</version>
+			<version>2.8.3</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>spring</artifactId>
@@ -857,7 +857,20 @@
 			<artifactId>activemq-pool</artifactId>
 			<version>5.15.0</version>
 		</dependency>
-
+		
+		<!-- rabbitmq -->
+		<dependency>
+		    <groupId>com.rabbitmq</groupId>
+		    <artifactId>amqp-client</artifactId>
+		    <version>4.2.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.amqp</groupId>
+		    <artifactId>spring-rabbit</artifactId>
+		    <version>1.7.3.RELEASE</version>
+		</dependency>
+		
+		
 
 
 		<!-- elasticsearch -->
@@ -949,7 +962,7 @@
 		</dependency>
 		<!-- activiti工作流 -->
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 			<version>1.1</version>
@@ -983,7 +996,7 @@
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.8.5</version>
-		</dependency>
+		</dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/com.xiaoleilu/hutool-core -->
 		<dependency>
@@ -1001,6 +1014,12 @@
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-hdfs</artifactId>
 			<version>2.8.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>1.5</version>
 		</dependency>
 
 		<dependency>
