--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -24,6 +24,12 @@ mailserver.password=sh1003555356hs
 
 activemq.url=tcp://119.23.231.239:61616
 
+rabbitmq.host=119.23.231.239
+rabbitmq.username=admin
+rabbitmq.password=123456
+rabbitmq.port=5672
+rabbitmq.vhost=testmq
+
 dubbo.url=zookeeper://119.23.231.239:2181
 
 elasticsearch.cluster.name=qh
