--- a/pom.xml
+++ b/pom.xml
@@ -870,6 +870,28 @@
 		    <version>1.7.3.RELEASE</version>
 		</dependency>
 		
+		<!-- Kafka和spring集成的支持类库，spring和kafka通信监听 -->
+		<dependency>
+		    <groupId>org.springframework.integration</groupId>
+		    <artifactId>spring-integration-kafka</artifactId>
+		    <version>2.1.1.RELEASE</version>
+		</dependency>
+		<!-- kafka发送消息以及接受消息使用的类库 -->
+		<dependency>
+		    <groupId>org.apache.kafka</groupId>
+		    <artifactId>kafka-clients</artifactId>
+		    <version>0.11.0.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.kafka</groupId>
+		    <artifactId>spring-kafka</artifactId>
+		    <version>1.2.2.RELEASE</version>
+		</dependency>
+		
+		
+		
+		
 		
 
 
