--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -30,6 +30,8 @@ rabbitmq.password=123456
 rabbitmq.port=5672
 rabbitmq.vhost=testmq
 
+kafka.url=119.23.231.239:9092
+
 dubbo.url=zookeeper://119.23.231.239:2181
 
 elasticsearch.cluster.name=qh
