--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -32,7 +32,8 @@ rabbitmq.vhost=testmq
 
 kafka.url=119.23.231.239:9092
 
-dubbo.url=zookeeper://119.23.231.239:2181
+#dubbo.url=zookeeper://119.23.231.239:2181
+dubbo.url=zookeeper://192.168.1.188:2181
 
 elasticsearch.cluster.name=qh
 elasticsearch.esNodes=119.23.231.239:9300
