--- a/src/main/resources/properties/redis.properties
+++ b/src/main/resources/properties/redis.properties
@@ -11,7 +11,12 @@ redis.timeOut=10000
 
 #redis
 #redis.master.hostname=127.0.0.1
-redis.master.hostname=119.23.231.239
-redis.master.password=7262140
+#redis.master.hostname=119.23.231.239
+#redis.master.password=7262140
 redis.master.port=6379
 #redis.master.password=
+
+#cqt
+redis.master.hostname=192.168.1.188
+redis.master.password=
+redis.database=0
