--- a/pom.xml
+++ b/pom.xml
@@ -374,6 +374,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.34</version>
 		</dependency>
+		<!-- 内嵌数据库 SQLite -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.20.0</version>
+		</dependency>
+
 		<!-- SQL server -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
