--- a/src/main/resources/config/properties/mongodb.properties
+++ b/src/main/resources/config/properties/mongodb.properties
@@ -1,8 +1,12 @@
 mongo.host=119.23.231.239
 mongo.port=27017
-mongo.database=platform
-mongo.user=root
-mongo.password=Passw0rd
+mongo.database=mongo
+
+mongo.user=
+mongo.password=
+#mongo.user=root
+#mongo.password=Passw0rd
+
 mongo.connectionsPerHost=10
 mongo.threadsAllowedToBlockForConnectionMultiplier=5
 mongo.connectTimeout=10000
