--- a/src/main/resources/config/properties/config.properties
+++ b/src/main/resources/config/properties/config.properties
@@ -28,7 +28,7 @@ rabbitmq.host=119.23.231.239
 rabbitmq.username=admin
 rabbitmq.password=123456
 rabbitmq.port=5672
-rabbitmq.vhost=testmq
+rabbitmq.vhost=/
 
 kafka.url=119.23.231.239:9092
 
