elasticsearch 提升 至 5.6.7 版本 (一)

--- a/src/main/resources/config/properties/config.properties
+++ b/src/main/resources/config/properties/config.properties
@@ -37,6 +37,7 @@ dubbo.url=zookeeper://192.168.1.188:2181
 
 elasticsearch.cluster.name=qh
 elasticsearch.esNodes=119.23.231.239:9300
+elasticsearch.esClient=119.23.231.239:9200
 
 jdbc.xaDataSourceClassName=com.alibaba.druid.pool.xa.DruidXADataSource
 jdbc.driverClassName=org.gjt.mm.mysql.Driver
