--- a/pom.xml
+++ b/pom.xml
@@ -678,8 +678,8 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>5.0.0.Alpha2</version>
-            <!-- <version>4.1.5.Final</version> -->
+            <!--<version>5.0.0.Alpha2</version>-->
+             <version>4.1.5.Final</version>
         </dependency>
 
         <!-- 数据后端校验 -->
@@ -940,7 +940,17 @@
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>2.4.5</version>
+            <version>5.6.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-client</artifactId>
+            <version>5.6.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>transport</artifactId>
+            <version>5.6.7</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/net.sf.ezmorph/ezmorph -->
         <dependency>
@@ -961,23 +971,23 @@
         <dependency>
             <groupId>fr.pilato.spring</groupId>
             <artifactId>spring-elasticsearch</artifactId>
-            <version>2.2.0</version>
+            <version>5.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>2.0.1.RELEASE</version>
+            <version>2.0.3.RELEASE</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-elasticsearch -->
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-elasticsearch</artifactId>
-            <!-- <version>2.1.0.RELEASE</version> -->
-            <version>2.1.4.RELEASE</version>
+            <version>3.0.3.RELEASE</version>
         </dependency>
+
 
         <!-- solr-solrj -->
         <dependency>
