--- a/src/main/resources/config/a_backup/log4j.properties
+++ b/src/main/resources/config/a_backup/log4j.properties
@@ -19,12 +19,23 @@ log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern =[%color{%p}][%-d{HH:mm:ss}] %C.%M(%L) | %m%n
 
 ### exception ###
-log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File = ./logs/errorlog4j.log
-log4j.appender.E.Append = true
-log4j.appender.E.Threshold = DEBUG
-log4j.appender.E.layout = org.apache.log4j.PatternLayout
-log4j.appender.E.layout.ConversionPattern =[%color{%p}][%-d{HH\:mm\:ss}] %C.%M(%L) | %m%n
+#log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.E.File = ./logs/errorlog4j.log
+#log4j.appender.E.Append = true
+#log4j.appender.E.Threshold = DEBUG
+#log4j.appender.E.layout = org.apache.log4j.PatternLayout
+#log4j.appender.E.layout.ConversionPattern =[%color{%p}][%-d{HH\:mm\:ss}] %C.%M(%L) | %m%n
+
+### exception ###
+log4j.appender.ERROR = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.ERROR.Threshold = ERROR
+log4j.appender.ERROR.DatePattern='.'yyyy-MM-dd
+log4j.appender.ERROR.maxBackupIndex=10
+log4j.appender.ERROR.layout = org.apache.log4j.PatternLayout
+log4j.appender.ERROR.layout.ConversionPattern =[%color{%p}][%-d{HH\:mm\:ss}] %C.%M(%L) | %m%n
+log4j.appender.ERROR.Append = true
+log4j.appender.ERROR.File = ./logs/errorlog4j.log
+log4j.appender.ERROR.bufferedIO=false
 
 #SpringMvc
 log4j.logger.org.springframework.web.servlet=DEBUG
