--- a/src/main/resources/config/properties/mongodb.properties
+++ b/src/main/resources/config/properties/mongodb.properties
@@ -1,11 +1,9 @@
-mongo.host=119.23.231.239
+mongo.host=193.112.44.172
 mongo.port=27017
 mongo.database=upload
 
-mongo.user=
+mongo.user=qh
 mongo.password=
-#mongo.user=root
-#mongo.password=Passw0rd
 
 mongo.connectionsPerHost=10
 mongo.threadsAllowedToBlockForConnectionMultiplier=5
