--- a/src/main/resources/config/properties/config.properties
+++ b/src/main/resources/config/properties/config.properties
@@ -8,25 +8,25 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.username-1=root
 #jdbc.password-1=123456
 
-jdbc.url-1=jdbc\:mysql\://119.23.231.239\:3306/newb?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url-1=jdbc\:mysql\://193.112.44.172\:3306/newb?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-1=root
-jdbc.password-1=7262140
+jdbc.password-1=
 
 jdbc.url-2=jdbc\:mysql\://127.0.0.1\:3306/newb2?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-2=root
-jdbc.password-2=123456
+jdbc.password-2=
 
 mailserver.host=smtp.163.com
 mailserver.port=25
 mailserver.port.ssl=465
 mailserver.username=15173961640@163.com
-mailserver.password=sh1003555356hs
+mailserver.password=
 
 activemq.url=tcp://119.23.231.239:61616
 
-rabbitmq.host=119.23.231.239
-rabbitmq.username=admin
-rabbitmq.password=123456
+rabbitmq.host=193.112.44.172
+rabbitmq.username=
+rabbitmq.password=
 rabbitmq.port=5672
 rabbitmq.vhost=/
 
