--- a/pom.xml
+++ b/pom.xml
@@ -552,7 +552,7 @@
             <version>0.6.1</version>
         </dependency>
         <!-- poi 操作word,excel等 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>3.16</version>
@@ -561,8 +561,15 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.16</version>
-        </dependency>
+        </dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/easyexcel -->
+        <!-- ALi caoz1 excel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>1.0.4</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
         <!-- Swagger -->
