--- a/pom.xml
+++ b/pom.xml
@@ -297,7 +297,8 @@
             <dependency> <groupId>org.springframework.webflow</groupId> <artifactId>spring-js-resources</artifactId>
             <version>2.4.2.RELEASE</version> </dependency> -->
         <!-- 连接池 -->
-        <dependency>
+
+        <!--<dependency>
             <groupId>commons-pool</groupId>
             <artifactId>commons-pool</artifactId>
             <version>1.6</version>
@@ -326,7 +327,8 @@
                     <groupId>geronimo-spec</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
@@ -388,11 +390,11 @@
         </dependency>
 
         <!-- SQL server -->
-        <dependency>
+        <!--<dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>sqljdbc4</artifactId>
             <version>4.0</version>
-        </dependency>
+        </dependency>-->
         <!-- JSON -->
         <!-- alibaba fastjson -->
         <dependency>
@@ -552,24 +554,26 @@
             <version>0.6.1</version>
         </dependency>
         <!-- poi 操作word,excel等 -->
-        <!--<dependency>
+        <!--03-->
+        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>3.16</version>
         </dependency>
+        <!--07-->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.16</version>
-        </dependency>-->
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.alibaba/easyexcel -->
-        <!-- ALi caoz1 excel -->
-        <dependency>
+        <!-- ALi easyExcel -->
+        <!--<dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
             <version>1.0.4</version>
-        </dependency>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
         <!-- Swagger -->
@@ -1148,19 +1152,14 @@
             <version>2.8.5</version>
         </dependency> -->
 
-        <!-- https://mvnrepository.com/artifact/com.xiaoleilu/hutool-core -->
         <dependency>
-            <groupId>com.xiaoleilu</groupId>
+            <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>3.0.4</version>
+            <version>4.1.17</version>
+            <scope>compile</scope>
         </dependency>
+
         <!-- hadoop -->
-        <!--已经弃用 -->
-        <!--<dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>1.2.1</version>
-        </dependency>-->
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
