--- a/pom.xml
+++ b/pom.xml
@@ -263,29 +263,68 @@
         <!-- WEB................................ -->
         <!-- 组件=============================== -->
         <!-- Spring security 权限包 -->
-        <!-- <dependency> <groupId>org.springframework.security</groupId> <artifactId>spring-security-web</artifactId>
-            <version>4.1.3.RELEASE</version> </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId> <version>4.1.3.RELEASE</version>
-            </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-acl</artifactId> <version>4.1.3.RELEASE</version>
-            </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-aspects</artifactId> <version>4.1.3.RELEASE</version>
-            </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-cas</artifactId> <version>4.1.3.RELEASE</version>
-            </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId> <version>4.1.3.RELEASE</version>
-            </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-crypto</artifactId> <version>4.1.3.RELEASE</version>
-            </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-ldap</artifactId> <version>4.1.3.RELEASE</version>
-            </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-openid</artifactId> <version>4.1.3.RELEASE</version>
-            <exclusions> <exclusion> <artifactId>httpclient</artifactId> <groupId>org.apache.httpcomponents</groupId>
-            </exclusion> </exclusions> </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-remoting</artifactId> <version>4.1.3.RELEASE</version>
-            </dependency> <dependency> <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-taglibs</artifactId> <version>4.1.3.RELEASE</version>
-            </dependency> -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-aspects</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>
+        <!--
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-acl</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-cas</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-openid</artifactId>
+            <version>4.2.9.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>httpclient</artifactId>
+                    <groupId>org.apache.httpcomponents</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-remoting</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>4.2.9.RELEASE</version>
+        </dependency>-->
         <!-- Spring webflow -->
         <!-- <dependency> <groupId>org.springframework.webflow</groupId> <artifactId>spring-faces</artifactId>
             <version>2.4.2.RELEASE</version> </dependency> <dependency> <groupId>org.springframework.webflow</groupId>
