--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -64,6 +64,16 @@
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping> -->
 
+	<!-- security 安全过滤器-->
+	<!--<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>-->
+
 	<filter>
 		<description>druid uri监听</description>
 		<filter-name>DruidWebStatFilter</filter-name>
