--- a/src/main/resources/config/properties/redis.properties
+++ b/src/main/resources/config/properties/redis.properties
@@ -11,8 +11,8 @@ redis.timeOut=10000
 
 #redis
 #redis.master.hostname=127.0.0.1
-redis.master.hostname=119.23.231.239
-redis.master.password=7262140
+redis.master.hostname=193.112.44.172
+redis.master.password=
 redis.master.port=6379
 #redis.master.password=
 
