--- a/src/main/resources/config/properties/config.properties
+++ b/src/main/resources/config/properties/config.properties
@@ -1,6 +1,6 @@
 #mysql version database druid setting
 #jdbc.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=newb
-# root 123456  上传记得修改密码
+# root 123456  \uFFFD\u03F4\uFFFD\uFFFD\u01F5\uFFFD\uFFFD\u07B8\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 validationQuery=SELECT 1
 jdbc.driver=com.mysql.jdbc.Driver
 #aliyun 119.23.231.239  newb 7262140
@@ -10,7 +10,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 
 jdbc.url-1=jdbc\:mysql\://193.112.44.172\:3306/newb?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-1=root
-jdbc.password-1=
+jdbc.password-1=7262140
 
 jdbc.url-2=jdbc\:mysql\://127.0.0.1\:3306/newb2?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-2=root
@@ -25,8 +25,8 @@ mailserver.password=
 activemq.url=tcp://119.23.231.239:61616
 
 rabbitmq.host=193.112.44.172
-rabbitmq.username=
-rabbitmq.password=
+rabbitmq.username=guest
+rabbitmq.password=guest
 rabbitmq.port=5672
 rabbitmq.vhost=/
 
@@ -34,6 +34,8 @@ kafka.url=119.23.231.239:9092
 
 #dubbo.url=zookeeper://119.23.231.239:2181
 dubbo.url=zookeeper://192.168.1.188:2181
+
+zookeeper.url=193.112.44.172:2181
 
 elasticsearch.cluster.name=qh
 elasticsearch.esNodes=119.23.231.239:9300
