--- a/pom.xml
+++ b/pom.xml
@@ -848,9 +848,14 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.6.5</version>
+            <version>2.7.0</version>
         </dependency>
-
+        <!--fescar-->
+        <dependency>
+            <groupId>com.alibaba.fescar</groupId>
+            <artifactId>fescar-all</artifactId>
+            <version>0.2.1</version>
+        </dependency>
         <!-- zipkin -->
         <dependency>
             <groupId>io.zipkin.brave</groupId>
@@ -1276,7 +1281,6 @@
             <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
             <version>2.9.1</version>
         </dependency>
-
 
         <!--hbase-->
         <dependency>
