--- a/pom.xml
+++ b/pom.xml
@@ -845,17 +845,30 @@
             <version>1.0</version>
         </dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo -->
         <dependency>
-            <groupId>com.alibaba</groupId>
+            <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
             <version>2.7.0</version>
         </dependency>
         <!--fescar-->
-        <dependency>
+        <!--<dependency>
             <groupId>com.alibaba.fescar</groupId>
             <artifactId>fescar-all</artifactId>
             <version>0.2.1</version>
+            <type>pom</type>
+        </dependency>-->
+        <dependency>
+            <groupId>com.alibaba.fescar</groupId>
+            <artifactId>fescar-core</artifactId>
+            <version>0.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.fescar</groupId>
+            <artifactId>fescar-spring</artifactId>
+            <version>0.2.1</version>
+        </dependency>
+
         <!-- zipkin -->
         <dependency>
             <groupId>io.zipkin.brave</groupId>
