--- a/pom.xml
+++ b/pom.xml
@@ -858,15 +858,25 @@
             <version>0.2.1</version>
             <type>pom</type>
         </dependency>-->
-        <dependency>
+        <!--<dependency>
             <groupId>com.alibaba.fescar</groupId>
             <artifactId>fescar-core</artifactId>
-            <version>0.2.1</version>
-        </dependency>
+            <version>0.2.3</version>
+        </dependency>-->
         <dependency>
             <groupId>com.alibaba.fescar</groupId>
             <artifactId>fescar-spring</artifactId>
-            <version>0.2.1</version>
+            <version>0.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.fescar</groupId>
+            <artifactId>fescar-tm</artifactId>
+            <version>0.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.fescar</groupId>
+            <artifactId>fescar-dubbo</artifactId>
+            <version>0.2.3</version>
         </dependency>
 
         <!-- zipkin -->
