--- a/pom.xml
+++ b/pom.xml
@@ -846,10 +846,27 @@
         </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.dubbo</groupId>-->
+            <!--<artifactId>dubbo</artifactId>-->
+            <!--<version>2.7.0</version>-->
+        <!--</dependency>-->
+        <!--nacos-->
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.7.0</version>
+            <version>2.6.5</version>
+        </dependency>
+        <!--暂时不能使用 Apache 2.7.0; 与fescar-dubbo 引用的 2.7.0 有冲突-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo-registry-nacos</artifactId>
+            <version>0.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.spring</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>1.0.2</version>
         </dependency>
         <!--fescar-->
         <!--<dependency>
@@ -873,11 +890,11 @@
             <artifactId>fescar-tm</artifactId>
             <version>0.2.3</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.alibaba.fescar</groupId>
             <artifactId>fescar-dubbo</artifactId>
             <version>0.2.3</version>
-        </dependency>
+        </dependency>-->
 
         <!-- zipkin -->
         <dependency>
