--- a/src/main/resources/config/properties/config.properties
+++ b/src/main/resources/config/properties/config.properties
@@ -8,11 +8,11 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.username-1=root
 #jdbc.password-1=123456
 
-jdbc.url-1=jdbc\:mysql\://freenat.club\:14126/newb?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url-1=jdbc\:mysql\://xingnian.xyz\:14126/newb?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-1=root
 jdbc.password-1=7262140
 
-jdbc.url-2=jdbc\:mysql\://freenat.club\:14126/newb2?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url-2=jdbc\:mysql\://xingnian.xyz\:14126/newb2?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-2=root
 jdbc.password-2=
 
