--- a/src/main/resources/config/properties/config.properties
+++ b/src/main/resources/config/properties/config.properties
@@ -8,11 +8,11 @@ jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.username-1=root
 #jdbc.password-1=123456
 
-jdbc.url-1=jdbc\:mysql\://xingnian.xyz\:14126/newb?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url-1=jdbc\:mysql\://frp1.chuantou.org\:54126/newb?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-1=root
 jdbc.password-1=7262140
 
-jdbc.url-2=jdbc\:mysql\://xingnian.xyz\:14126/newb2?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url-2=jdbc\:mysql\://frp1.chuantou.org\:54126/newb2?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-2=root
 jdbc.password-2=
 
@@ -24,7 +24,7 @@ mailserver.password=
 
 activemq.url=tcp://119.23.231.239:61616
 
-rabbitmq.host=193.112.44.172
+rabbitmq.host=192.168.1.103
 rabbitmq.username=guest
 rabbitmq.password=guest
 rabbitmq.port=5672
@@ -33,14 +33,14 @@ rabbitmq.vhost=/
 kafka.url=119.23.231.239:9092
 
 #dubbo.url=zookeeper://119.23.231.239:2181
-#dubbo.url=zookeeper://192.168.1.188:2181
-dubbo.url=nacos://192.168.1.103:8848
+dubbo.url=zookeeper://192.168.1.188:2181
+#dubbo.url=nacos://192.168.1.103:8848
 
 zookeeper.url=193.112.44.172:2181
 
 elasticsearch.cluster.name=qh
-elasticsearch.esNodes=119.23.231.239:9300
-elasticsearch.esClient=119.23.231.239:9200
+elasticsearch.esNodes=frp1.chuantou.org:54130
+elasticsearch.esClient=frp1.chuantou.org:54120
 
 jdbc.xaDataSourceClassName=com.alibaba.druid.pool.xa.DruidXADataSource
 jdbc.driverClassName=org.gjt.mm.mysql.Driver
